src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_7_environment.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "is_file": True,
            },
            enclosing: None,
        },
    },
}
