src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_8_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "is_directory",
            expression: Boolean {
                boolean: False,
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "is_file",
        },
    },
]
