src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_9_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 2,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "file",
        },
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: String {
            literal: "/tmp/temp.txt",
        },
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 28,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "file",
        },
        position: Position {
            line: 2,
            column: 1,
        },
    },
]
