src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_9_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "file",
            expression: String {
                literal: "/tmp/temp.txt",
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "file",
        },
    },
]
